--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h3 style="margin-bottom: 20px">CLONK COMPLIMENT MACHINE</h3>
+    <h3 style="margin-bottom: 20px">LCOLONQ WISH MACHINE</h3>
 
     <form id="form" method="post" action="/send">
       <label>
@@ -15,7 +15,7 @@
       </label>
 
       <label>
-        Compliment
+        Message
         <input name="text" type="text" />
       </label>
 
